; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_drm_gfx.c_drm_surface_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_drm_gfx.c_drm_surface_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_surface = type { i32, i32, %struct.drm_surface* }
%struct.drm_video = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.drm_surface**)* @drm_surface_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @drm_surface_free(i8* %0, %struct.drm_surface** %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.drm_surface**, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.drm_video*, align 8
  %7 = alloca %struct.drm_surface*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.drm_surface** %1, %struct.drm_surface*** %4, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = bitcast i8* %8 to %struct.drm_video*
  store %struct.drm_video* %9, %struct.drm_video** %6, align 8
  %10 = load %struct.drm_surface**, %struct.drm_surface*** %4, align 8
  %11 = load %struct.drm_surface*, %struct.drm_surface** %10, align 8
  store %struct.drm_surface* %11, %struct.drm_surface** %7, align 8
  store i32 0, i32* %5, align 4
  br label %12

12:                                               ; preds = %26, %2
  %13 = load i32, i32* %5, align 4
  %14 = load %struct.drm_surface*, %struct.drm_surface** %7, align 8
  %15 = getelementptr inbounds %struct.drm_surface, %struct.drm_surface* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = icmp slt i32 %13, %16
  br i1 %17, label %18, label %29

18:                                               ; preds = %12
  %19 = load %struct.drm_surface*, %struct.drm_surface** %7, align 8
  %20 = getelementptr inbounds %struct.drm_surface, %struct.drm_surface* %19, i32 0, i32 2
  %21 = load %struct.drm_surface*, %struct.drm_surface** %20, align 8
  %22 = load i32, i32* %5, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds %struct.drm_surface, %struct.drm_surface* %21, i64 %23
  %25 = getelementptr inbounds %struct.drm_surface, %struct.drm_surface* %24, i32 0, i32 1
  store i32 0, i32* %25, align 4
  br label %26

26:                                               ; preds = %18
  %27 = load i32, i32* %5, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %5, align 4
  br label %12

29:                                               ; preds = %12
  %30 = load %struct.drm_surface*, %struct.drm_surface** %7, align 8
  %31 = getelementptr inbounds %struct.drm_surface, %struct.drm_surface* %30, i32 0, i32 2
  %32 = load %struct.drm_surface*, %struct.drm_surface** %31, align 8
  %33 = call i32 @free(%struct.drm_surface* %32)
  %34 = load %struct.drm_surface*, %struct.drm_surface** %7, align 8
  %35 = call i32 @free(%struct.drm_surface* %34)
  %36 = load %struct.drm_surface**, %struct.drm_surface*** %4, align 8
  store %struct.drm_surface* null, %struct.drm_surface** %36, align 8
  ret void
}

declare dso_local i32 @free(%struct.drm_surface*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
